--- a/src/style/helpers/variables.scss
+++ b/src/style/helpers/variables.scss
@@ -3,34 +3,41 @@ $primary: #1f122c;
 $secondary: #a97180;
 $white: #ffff;
 $blue: #83b3c9;
-// $black: #64516c;
+$purple: #64516c;
 $pink: #f4d4d7;
 
 //font-size
 $title-size: 40px;
-$subtitle-size:25px;
-$content-size:18px;
-$normal:400;
+$subtitle-size: 20px;
+$content-size: 16px;
+$normal: 400;
 $bold: 600;
-$semi-bold:500;
-$radius:20px;
+$semi-bold: 500;
+$radius: 10px;
 $paddingSize: 4px;
 $marginSize: 8px;
 
-
 //mixins
-@mixin basicBlocksSize{
-    max-width: 800px;
-    margin: 0 auto;
+@mixin basicBlocksSize {
+  max-width: 800px;
+  margin: 0 auto;
 }
-
-// @mixin contentBlocks{
-// max-width: 1100px;
-// width: 100%;
-// margin: 0 auto;
-// }
-
-// @mixin borderShadow {
-//     border-radius: $radius;
-//     box-shadow: 5px 5px 10px 1px $secondary;
-// }
+@mixin borderShadow {
+  // border-radius: $radius;
+  box-shadow: 0px 0px 70px 5px $purple;
+}
+@mixin button {
+  width: 90px;
+  padding: $paddingSize * 2;
+  border-radius: $radius;
+  border: 1px solid $blue;
+  font-size: $content-size;
+  color: $white;
+  cursor: pointer;
+}
+@mixin input {
+  border: none;
+  outline: 0;
+  background-color: inherit;
+  color: $white;
+}
