--- a/src/components/FiltrationInputs/FiltrationInputs.scss
+++ b/src/components/FiltrationInputs/FiltrationInputs.scss
@@ -20,11 +20,11 @@
       border: none;
     }
     .filtration__button-active {
-      @include button;
+      @extend %button;
       background-color: $purple;
     }
     .filtration__button {
-      @include button;
+      @extend %button;
       background-color: $primary;
     }
   }
@@ -34,7 +34,7 @@
   }
 
   &__input {
-    @include input;
+    @extend %input;
     height: 36px;
     border-bottom: 2px solid $blue;
     padding: $paddingSize * 2;
